:recycle: Refactoring code.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -77,7 +77,7 @@
 
     .post_comments {
         font-size: 14px;
-        color: #2c2c2c;
+        color: #838181;
         margin-top: 30px;
         padding: 35px 0 45px;
     }
