--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,42 +13,14 @@
         </div>
     </main>
 
+    <!-- back to top -->
+    <a id="backToTop" href="#" class="back-to-top">
+        <i class="ri-arrow-up-s-line"></i>
+    </a>
+
     {{ partial "footer.html" . }}
 
     {{ partial "js.html" . }}
 </body>
 
 </html>
-
-<style>
-    /* main horizontally center */
-
-    .main {
-        flex: 1;
-        background: #ffffff;
-        box-shadow: 0 10px 20px 0 rgba(236, 236, 236, 0.86);
-        width: 800px;
-        margin: 60px auto 0;
-    }
-
-    @media screen and (max-width: 900px) {
-        .main {
-            width: 95%;
-            margin-top: 20px;
-        }
-    }
-
-    /* content style */
-
-    .content {
-        width: 720px;
-        height: auto;
-        margin: 0 auto;
-    }
-
-    @media screen and (max-width: 900px) {
-        .content {
-            width: 90%;
-        }
-    }
-</style>
