--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -28,7 +28,6 @@
         </div>
 
     </div>
-
     <!-- comment system -->
     {{ if .Site.Params.valine.enable }}
     {{ partial "comments.html" . }}
@@ -80,6 +79,29 @@
         color: #838181;
         margin-top: 30px;
         padding: 35px 0 45px;
+    }
+
+    /* back to top */
+    .back-to-top {
+        text-decoration: none;
+        position: fixed;
+        bottom: 40px;
+        right: 40px;
+        background: #f0f0f0;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        line-height: 36px;
+        font-size: 18px;
+        text-align: center;
+        transition-duration: 0.5s;
+        transition-property: background-color;
+        display: block;
+    }
+
+    .back-to-top:hover {
+        cursor: pointer;
+        background: #dfdfdf;
     }
 </style>
 {{ end }}
