--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -8,6 +8,7 @@
 html {
     background-color: #f7f7f7;
     -webkit-font-smoothing: antialiased;
+    scroll-behavior: smooth;
 }
 
 /* tune smaller scrollbar width*/
@@ -67,6 +68,44 @@ hr {
 
 a {
     text-decoration: none;
+}
+
+
+/* main style*/
+
+/* main horizontally center */
+
+.main {
+    flex: 1;
+    background: #ffffff;
+    box-shadow: 0 10px 20px 0 rgba(236, 236, 236, 0.86);
+    width: 800px;
+    margin: 60px auto 0;
+}
+
+@media screen and (max-width: 900px) {
+    .main {
+        width: 95%;
+        margin-top: 20px;
+    }
+}
+
+/* content style */
+
+.content {
+    width: 720px;
+    height: auto;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 900px) {
+    .content {
+        width: 90%;
+    }
+}
+
+.back-to-top{
+    display: none;
 }
 
 /*
